--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,3 +1,4 @@
 .icard{
     margin-bottom: 50px;
+    margin-top: 50px;
 }
